# xcode

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENT_FILE_READING_FIX.md  ARCHITECTURE.md  BRANCH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ENHANCEMENT_PLAN.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  ENHANCED_LOGGING.md  EXTENSIVE_TEST_RESULTS.md  FIX_SHORT_MESSAGE.md  FUNCTIONAL_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODE.md  LATENCY_ANALYSIS.md  LATENCY_REPORT.md  LICENSE  MERGE_SUMMARY.md  Makefile  QUICKSTART.md  README.md  README_DOCKER.md  RECURSION_LIMIT_SOLUTION.md  RELEASE_SUMMARY.md  STARTUP_IMPROVEMENTS.md  TOOL_RETRY_FUNCTIONAL_TEST_REPORT.md  TOOL_RETRY_REGRESSION_REPORT.md  benchmark_results.json  docker-compose.yml  docker-start.sh  pyproject.toml  requirements.txt  test_interactive_basic.sh  test_startup_now.sh
.cursor/skills/xcode-docker-stack/: SKILL.md
.github/workflows/: ci.yml
agent/: .dockerignore  .env.example  .gitignore  CUSTOM_TOOLS.md  Dockerfile  HITL_USAGE.md  README.md  SIMPLE_AGENT.md  SUPERVISOR.md  alembic.ini  local-environment.sh  pyproject.toml  start.sh
agent/app/: main.py
agent/app/api/agents/: controller.py  models.py  repository.py  routes.py  service.py  shell_stream_multiplex.py
agent/app/api/tools/: models.py  routes.py
agent/app/core/: health_routes.py  logger.py  router.py  settings.py
agent/app/core/db/: connection.py  models.py
agent/app/core/db/alembic/: env.py
agent/app/core/db/alembic/versions/: 0eed7ae4d53b_add_agent_type_to_agent_sessions.py  5d27842857f7_add_agent_name_column.py  a39bdb664000_create_agent_sessions_table.py
agent/app/core/errors/: custom_errors.py  error_handler.py
agent/app/core/mcp/: models.py
agent/app/core/middleware/: auth.py  mcp_headers.py  request_logging.py  telemetry.py
agent/app/core/telemetry/: config.py  instruments.py  metrics.py  traces.py
agent/app/engine/: agent_tool_config.py  custom_tools.py  mcp_client.py  mcp_tool_call_cache.py  mcp_tools.py  stream_processor.py
agent/app/engine/xcode_coding_agent/: agent.py  prompt.py  shell_core.py  shell_stream_registry.py  shell_tool.py
agent/tests/: test_shell_stream_multiplex.py
docs/: ARCHITECTURE.md  DOCKER.md  IMPROVEMENTS.md  LATENCY_ANALYSIS.md  MERGE_CONFLICT_GUIDE.md  README.md  REGRESSION_TEST_REPORT.md
docs/performance/: LATENCY_REPORT.md  PRIORITY1_IMPLEMENTATION.md
examples/: formatting_demo.py
litellm/: config.yaml
llm-proxy/: config.yaml
scripts/: resolve_conflicts.py
src/xcode/: __init__.py  agent_loop.py  cli.py  ensure_graph.py  llm_config.py  runner.py
src/xcode/schema/: __init__.py  neo4j_for_agents.md
tests/: benchmark_latency.py  load_agent_settings.py  test_agent_repository_shell_summary.py  test_agent_runner.py  test_config.py  test_custom_errors.py  test_execution_tracker.py  test_file_cache.py  test_formatting.py  test_graph_builder.py  test_llm_compat.py  test_mcp_tool_call_cache.py  test_priority1_optimizations.py  test_schema.py  test_shell_core.py  test_shell_stream_registry.py  test_startup.py  test_task_classifier.py  test_test_discovery_service.py  test_test_generation_service.py  test_tool_retry.py  test_verification.py  test_xcode_env_paths.py
xcode/: __init__.py  agent_runner.py  banner.py  cli.py  config.py  constants.py  container.py  execution_tracker.py  file_cache.py  formatting.py  graph_builder.py  interactive.py  interfaces.py  llm_compat.py  math_utils.py  orchestrator.py  orchestrator_new.py  result.py  schema.py  startup.py  task_classifier.py  task_config.py  utils.py  validation.py  verification.py
xcode/commands/: __init__.py  base_command.py  build_graph_command.py  execute_task_command.py  verify_changes_command.py
xcode/domain/: __init__.py  interfaces.py  models.py
xcode/infrastructure/: __init__.py  llm_client.py  neo4j_client.py
xcode/models/: __init__.py  classification.py  config.py  file_info.py  result.py  task.py  test_info.py
xcode/repositories/: __init__.py  agent_repository.py  cache_repository.py  file_repository.py  graph_repository.py  verification_repository.py
xcode/requests/: __init__.py  cli_handler.py  interactive_handler.py
xcode/services/: __init__.py  agent_service.py  classification_service.py  graph_service.py  task_service.py  test_discovery_service.py  test_generation_service.py  verification_service.py
xcode/shared/: __init__.py  banner.py  schema.py
