[project]
name = "xcode"
version = "0.1.0"
description = "CLI tool (like Claude Code) to run coding tasks with xgraph knowledge graph and la-factoria agents; supports local LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
xcode = "xcode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
